--- a/templates/web/about.html
+++ b/templates/web/about.html
@@ -64,8 +64,11 @@
             <div class="col-xl-6 col-lg-6 mb-30">
                 <div class="about-content two">
                     <h3 class="title">Who We Are</h3>
-                    <p class="para">Softim is not only a globally recognized IT company but also a family filled with talented experts that help global brands, enterprises, mid-size businesses or even startups <br> with innovative solutions.</p>
-                    <p>Softin is not an entity, it’s a family that represents togetherness for over two decades of a successful journey. For IndiaNICians, the definition of success is to transcend innovative ideas of people to reality with the help of our tech expertise, this is what we, as a Team, want to be remembered for!</p>
+                    <p class="para">
+                        Aside from being a globally known company, Onflap IT solutions is also a family of talented experts who assist global brands, enterprises, mid-sized companies, and even startups <br>
+                        with innovative solutions.
+                    </p>
+                    <p>With Onflip IT Solutions, you are part of a family that represents togetherness for more than two decades of success. We can give you the best medium for your next big app idea to show off its attributes. We develop customised mobile applications for your business, regardless of the industry you are in.</p>
                     <div class="about-btn two">
                         <a href="{% url 'web:contact' %}" class="btn--base">Contact us</a>
                         <span>or Call <a href="tel:11026593268003">+110 2659 3268 003</a></span>
@@ -122,9 +125,7 @@
                     <div class="agency-logo-text">
                         <span>AGENCY</span>
                     </div>
-                    <h2 class="title">Softim is a digital agency that offers a wide scale of
-                        creative services, including brand development
-                        online marketing and lots more.</h2>
+                    <h2 class="title">Onflap IT Solutions is a digital service provider that offers a wide scale of creative services and software solutions. </h2>
                 </div>
                 <div class="agency-statistics-area">
                     <div class="row justify-content-center mb-30-none">
@@ -205,7 +206,9 @@
                 <div class="section-header-wrapper">
                     <div class="section-header">
                         <h2 class="section-title">Onflap Expert Team</h2>
-                        <p>We rank among the best in the US, Argentina, and Ukraine. Our apps get featured as best in class, and our clients love our work.</p>
+                        <p>
+                            The success of any company is driven by a team of dedicated professionals. Take a look at our vibrant team members who works hard to create innovative projects.
+                        </p>
                     </div>
                     <div class="slider-nav-area">
                         <div class="slider-prev">
