--- a/templates/web/category-product.html
+++ b/templates/web/category-product.html
@@ -74,9 +74,9 @@
                                 <div class="gallery-thumb">
                                     <img src="{% static 'web/images/gallery/gallery-10.png' %}" alt="gallery">
                                     <div class="gallery-thumb-overlay two">
-                                        <div class="gallery-icon">
+                                        <!-- <div class="gallery-icon">
                                             <a href=""><i class="fas fa-shopping-cart"></i></a>
-                                        </div>
+                                        </div> -->
                                         <div class="gallery-icon">
                                             <a href="{% url 'web:productdetails' %}"><i class="fas fa-bars"></i></a>
                                         </div>
@@ -93,9 +93,9 @@
                                 <div class="gallery-thumb">
                                     <img src="{% static 'web/images/gallery/gallery-2.png' %}" alt="gallery">
                                     <div class="gallery-thumb-overlay two">
-                                        <div class="gallery-icon">
+                                        <!-- <div class="gallery-icon">
                                             <a href=""><i class="fas fa-shopping-cart"></i></a>
-                                        </div>
+                                        </div> -->
                                         <div class="gallery-icon">
                                             <a href=""><i class="fas fa-bars"></i></a>
                                         </div>
@@ -112,9 +112,9 @@
                                 <div class="gallery-thumb">
                                     <img src="{% static 'web/images/gallery/gallery-3.png' %}" alt="gallery">
                                     <div class="gallery-thumb-overlay two">
-                                        <div class="gallery-icon">
+                                        <!-- <div class="gallery-icon">
                                             <a href=""><i class="fas fa-shopping-cart"></i></a>
-                                        </div>
+                                        </div> -->
                                         <div class="gallery-icon">
                                             <a href=""><i class="fas fa-bars"></i></a>
                                         </div>
@@ -131,9 +131,9 @@
                                 <div class="gallery-thumb">
                                     <img src="{% static 'web/images/gallery/gallery-11.png' %}" alt="gallery">
                                     <div class="gallery-thumb-overlay two">
-                                        <div class="gallery-icon">
+                                        <!-- <div class="gallery-icon">
                                             <a href=""><i class="fas fa-shopping-cart"></i></a>
-                                        </div>
+                                        </div> -->
                                         <div class="gallery-icon">
                                             <a href=""><i class="fas fa-bars"></i></a>
                                         </div>
@@ -150,9 +150,9 @@
                                 <div class="gallery-thumb">
                                     <img src="{% static 'web/images/gallery/gallery-4.png' %}" alt="gallery">
                                     <div class="gallery-thumb-overlay two">
-                                        <div class="gallery-icon">
+                                        <!-- <div class="gallery-icon">
                                             <a href=""><i class="fas fa-shopping-cart"></i></a>
-                                        </div>
+                                        </div> -->
                                         <div class="gallery-icon">
                                             <a href=""><i class="fas fa-bars"></i></a>
                                         </div>
@@ -169,9 +169,9 @@
                                 <div class="gallery-thumb">
                                     <img src="{% static 'web/images/gallery/gallery-5.png' %}" alt="gallery">
                                     <div class="gallery-thumb-overlay two">
-                                        <div class="gallery-icon">
+                                        <!-- <div class="gallery-icon">
                                             <a href=""><i class="fas fa-shopping-cart"></i></a>
-                                        </div>
+                                        </div> -->
                                         <div class="gallery-icon">
                                             <a href=""><i class="fas fa-bars"></i></a>
                                         </div>
@@ -188,9 +188,9 @@
                                 <div class="gallery-thumb">
                                     <img src="{% static 'web/images/gallery/gallery-6.png' %}" alt="gallery">
                                     <div class="gallery-thumb-overlay two">
-                                        <div class="gallery-icon">
+                                        <!-- <div class="gallery-icon">
                                             <a href=""><i class="fas fa-shopping-cart"></i></a>
-                                        </div>
+                                        </div> -->
                                         <div class="gallery-icon">
                                             <a href=""><i class="fas fa-bars"></i></a>
                                         </div>
@@ -207,9 +207,9 @@
                                 <div class="gallery-thumb">
                                     <img src="{% static 'web/images/gallery/gallery-7.png' %}" alt="gallery">
                                     <div class="gallery-thumb-overlay two">
-                                        <div class="gallery-icon">
+                                        <!-- <div class="gallery-icon">
                                             <a href=""><i class="fas fa-shopping-cart"></i></a>
-                                        </div>
+                                        </div> -->
                                         <div class="gallery-icon">
                                             <a href=""><i class="fas fa-bars"></i></a>
                                         </div>
@@ -227,14 +227,14 @@
             </div>
             <div class="col-xl-4 col-lg-4 mb-30">
                 <div class="service-sidebar">
-                    <div class="category-widget-box mb-30">
+                    <!-- <div class="category-widget-box mb-30">
                         <ul class="category-list two">
                             <li><a href="#0"><i class="fas fa-chevron-right"></i> Web Design</a></li>
                             <li><a href="#0"><i class="fas fa-chevron-right"></i> Digital Marketing</a></li>
                             <li><a href="#0"><i class="fas fa-chevron-right"></i> Search SEO</a></li>
                             <li><a href="#0"><i class="fas fa-chevron-right"></i> Web Development</a></li>
                         </ul>
-                    </div>
+                    </div> -->
                     <div class="widget-box mb-30">
                         <h4 class="widget-title">Download</h4>
                         <div class="download-widget-btn">
