--- a/templates/web/home.html
+++ b/templates/web/home.html
@@ -316,9 +316,10 @@ Start Project
                         <div class="logo-icon">
                             <img src="{% static 'web/images/fav.png' %}" alt="favicon">
                         </div>
-                        <h2 class="title">Softim Recent Projects</h2>
-                        <p>Credibly grow premier ideas rather than bricks-and-clicks strategic theme areas
-                            distributed</p>
+                        <h2 class="title">Our Recent Projects</h2>
+                        <p>
+                            Take look at our latest software products made to boost your business.
+                        </p>
                         <div class="project-left-btn">
                             <a href="" class="btn--base active">View All Projects</a>
                         </div>
@@ -417,11 +418,12 @@ Start About
                 <div class="col-xl-6 col-lg-6 mb-30">
                     <div class="about-content">
                         <h2 class="title">Have a project in mind? <span class="text--base">Let's connect</span></h2>
-                        <p class="para">We rank among the best in the US, Argentina, and Ukraine. Our apps get
-                            featured as best in class, & our clients love our work.</p>
-                        <p>Welcome To Softim, a software development company, helps to digitize businesses by
-                            focusing on client’s business challenges, needs, pain points and providing
-                            business-goals-oriented software solutions.</p>
+                        <p class="para">
+                            If you are looking for reliable software for your business, Onflap IT Solution is the best choice. Our software is featured as being the best in class, and our clients are ecstatic about our products.
+                        </p>
+                        <p>
+                            We are Onflap IT solutions, a software development company that assists businesses in digitizing their activities by focusing on clients' business challenges, needs, and target audiences by developing business-oriented software solutions.
+                        </p>
                         <div class="about-btn">
                             <a href="{% url 'web:contact' %}" class="btn--base">Send Message</a>
                         </div>
@@ -595,8 +597,7 @@ Start Client
             <div class="col-xl-7 col-lg-8 text-center">
                 <div class="section-header">
                     <h2 class="section-title">Hear from happy customers</h2>
-                    <p>Credibly grow premier ideas rather than bricks-and-clicks strategic theme areas distributed
-                        for stand-alone web-readiness.</p>
+                    <p>Happy clients are the best assets of a company. Here is some awesome feedback from our cherished customers.</p>
                 </div>
             </div>
         </div>
@@ -752,7 +753,8 @@ Start Contact
                         <div class="contact-form-header">
                             <div class="left">
                                 <h2 class="title">Get in Touch <span class="text--base">Let's Talk</span></h2>
-                                <p>Credibly grow premier ideas rather than bricks-and-clicks strategic theme areas.
+                                <p>
+                                    We are eager to answer your queries, feel free to connect with us and gain your added benefits from us.
                                 </p>
                             </div>
                             <div class="right">
