--- a/templates/web/product-details.html
+++ b/templates/web/product-details.html
@@ -31,7 +31,9 @@
                         <div class="breadcrumb-area">
                             <nav aria-label="breadcrumb">
                                 <ol class="breadcrumb">
-                                    <li class="breadcrumb-item"><a href="">Home</a></li>
+                                    < <li class="breadcrumb-item"><a href="{% url 'web:home' %}">Home</a></li>
+                                    <li class="breadcrumb-item"><a href="
+                                        >Product</a></li>
                                     <li class="breadcrumb-item active" aria-current="page">Service Single</li>
                                 </ol>
                             </nav>
